--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   ],
   "require": {
     "php": "^8.1",
-    "justbetter/odata-client": "^1.2",
-    "laravel/framework": "^10.0"
+    "justbetter/odata-client": "1.2.0",
+    "laravel/framework": "^11.0"
   },
   "require-dev": {
     "laravel/pint": "^1.6",
